No way this builds right
I will eat my foot if this builds properly. There's like a 0% chance of no errors.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"prepare": "svelte-kit sync || echo ''",
 		"prepack": "svelte-kit sync && svelte-package && publint",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"clean": "rimraf node_modules/.vite"
 	},
 	"files": [
 		"dist",
@@ -35,20 +36,30 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@threlte/core": "^8.0.1",
+		"@threlte/extras": "^9.1.0",
+		"@threlte/rapier": "^3.1.0",
+		"@types/node": "^22.13.10",
+		"@types/three": "^0.174.0",
+		"dart-sass": "^1.25.0",
 		"publint": "^0.3.2",
+		"rimraf": "^5.0.5",
+		"sass": "^1.86.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^6.0.0"
+		"svelte-preprocess": "^6.0.3",
+		"three": "^0.174.0",
+		"typescript": "^5.8.2",
+		"vite": "^6.0.0",
+		"vite-plugin-inspect": "^11.0.0"
 	},
 	"keywords": [
 		"svelte"
 	],
 	"dependencies": {
-		"@threlte/core": "^8.0.1",
-		"@threlte/extras": "^9.1.0",
-		"@threlte/rapier": "^3.1.0",
-		"@types/three": "^0.174.0",
-		"three": "^0.174.0"
+		"@dimforge/rapier3d-compat": "^0.15.0",
+		"lucide-svelte": "^0.483.0",
+		"phosphor-svelte": "^3.0.1",
+		"utopia-core-scss": "^1.2.1"
 	}
 }
