--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.20.2",
 		"@sveltejs/package": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@threlte/core": "^8.0.1",
 		"@threlte/extras": "^9.1.0",
 		"@threlte/rapier": "^3.1.0",
