--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@dimforge/rapier3d-compat": "^0.15.0",
 		"lucide-svelte": "^0.483.0",
 		"phosphor-svelte": "^3.0.1",
+		"postprocessing": "^6.37.1",
 		"utopia-core-scss": "^1.2.1"
 	}
 }
