--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"lucide-svelte": "^0.483.0",
 		"phosphor-svelte": "^3.0.1",
 		"postprocessing": "^6.37.1",
+		"svelte-katex": "^0.1.2",
 		"utopia-core-scss": "^1.2.1"
 	}
 }
