--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 	],
 	"dependencies": {
 		"@dimforge/rapier3d-compat": "^0.15.0",
+		"jsdom": "^26.0.0",
 		"lucide-svelte": "^0.483.0",
 		"phosphor-svelte": "^3.0.1",
 		"postprocessing": "^6.37.1",
