Update Visualization Components and FBD Integration
- Added new words to the cSpell configuration for improved spell checking.
- Removed unused imports in Cube and Skateboard components for cleaner code.
- Adjusted scale property in the Scene component for better visual representation.
- Enhanced FBD component to utilize the full RigidBody API, improving physics calculations and visual accuracy.
- Introduced an inner group in FBD for positioning visual elements relative to the center of mass.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
 	"cSpell.words": [
+		"Angvel",
 		"dimforge",
 		"eventname",
 		"gltf",
 		"lerp",
 		"Linvel",
 		"STIX",
-		"threlte"
+		"threlte",
+		"trimesh"
 	]
 }
