Add svelte-portal dependency and update styles for improved UI consistency
- Added svelte-portal as a dependency in package.json and package-lock.json for enhanced component rendering.
- Updated ChapterHeaderNav and Navigation components to use CSS variables for text colors, improving theme adaptability.
- Enhanced Cube and Ground components with new color properties and removed unused gradient textures for cleaner visuals.
- Refactored PrinterCalibration components to utilize new color variables and improve UI clarity.
- Introduced new chapter descriptions in chapters.ts for better context in the table of contents.

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"phosphor-svelte": "^3.0.1",
 		"postprocessing": "^6.37.1",
 		"svelte-katex": "^0.1.2",
+		"svelte-portal": "^2.2.1",
 		"utopia-core-scss": "^1.2.1"
 	}
 }
