Update dependencies and enhance styling for improved functionality and clarity
- Added new dependencies: p5 and p5-svelte for enhanced graphics capabilities.
- Updated Vite configuration to prevent SSR externalization of specific libraries for better performance.
- Improved app styling by adding margin to list items for better layout.
- Enhanced vector operations and components sections in Svelte to provide clearer explanations and visualizations of 1D and 2D vectors.
- Updated variable styles for primary interactive color to improve visual consistency across the application.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
 		"@dimforge/rapier3d-compat": "^0.15.0",
 		"jsdom": "^26.0.0",
 		"lucide-svelte": "^0.483.0",
+		"p5": "^2.0.1",
+		"p5-svelte": "^3.1.2",
 		"phosphor-svelte": "^3.0.1",
 		"postprocessing": "^6.37.1",
 		"svelte-katex": "^0.1.2",
