--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
 		"@threlte/core": "^8.0.1",
 		"@threlte/extras": "^9.1.0",
 		"@threlte/rapier": "^3.1.0",
+		"@types/animejs": "^3.1.13",
 		"@types/node": "^22.13.10",
 		"@types/three": "^0.174.0",
+		"animejs": "^4.0.2",
 		"dart-sass": "^1.25.0",
 		"publint": "^0.3.2",
 		"rimraf": "^5.0.5",
