--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@threlte/extras": "^9.1.0",
 		"@threlte/rapier": "^3.1.0",
 		"@types/animejs": "^3.1.13",
+		"@types/katex": "^0.16.7",
 		"@types/node": "^22.13.10",
 		"@types/three": "^0.174.0",
 		"animejs": "^4.0.2",
