--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 	],
 	"dependencies": {
 		"@dimforge/rapier3d-compat": "^0.15.0",
+		"@supabase/supabase-js": "^2.49.4",
 		"jsdom": "^26.0.0",
 		"lucide-svelte": "^0.483.0",
 		"p5": "^2.0.1",
