--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@vercel/analytics": "^1.5.0",
 		"jsdom": "^26.0.0",
 		"lucide-svelte": "^0.483.0",
+		"mathlifier": "^1.0.0",
 		"p5": "^2.0.1",
 		"p5-svelte": "^3.1.2",
 		"phosphor-svelte": "^3.0.1",
